translation tags fixes for initial queries, csrf fix in gil

--- a/portal/translations/js/src/frontend.json
+++ b/portal/translations/js/src/frontend.json
@@ -1,113 +1,121 @@
 {
-  "Select All": "",
-  "Clear All": "",
-  "Close": "",
-  "Error occurred retrieving data from server.": "",
-  "Please choose at least one instrument.": "",
-  "Please choose one download type.": "",
-  "Error retrieving demographics information for user.": "",
-  "Error occurred updating user organization.": "",
-  "Error updating organization": "",
-  "Decision Support": "",
-  "Symptom Tracker": "",
-  "Edit in Liferay": "",
-  "No affiliated clinic": "",
-  "No clinic selected": "",
-  "Patient is deceased": "",
-  "Consent Status": "",
-  "Status": "",
-  "Agreement": "",
-  "Date": "",
-  "Regiatration Date": "",
-  "GMT": "",
-  "Agreed to terms": "",
-  "TrueNTH USA Terms of Use": "",
-  "View": "",
-  "Consented": "",
-  "Consented / Enrolled": "",
-  "Withdrawn - Suspend Data Collection and Report Historic Data": "",
-  "Suspend Data Collection and Report Historic Data": "",
-  "deleted on": "",
-  "expired": "",
-  "Consent Status Editor": "",
-  "Modify the consent status for this user to": "",
-  "Consent Date Editor": "",
-  "Modify the consent date": "",
-  "(GMT 24-hour format)": "",
-  "for this agreement to:": "",
-  "Submit": "",
-  "Sharing information with clinics ": "",
-  "No Consent Record Found": "",
-  "Date must in the valid format.": "",
-  "Hour must be in valid format, range 0 to 23.": "",
-  "Minute must be in valid format, range 0 to 59.": "",
-  "Second must be in valid format, range 0 to 59.": "",
-  "Error processing data.  Make sure the date is in the correct format.": "",
-  "You must enter a valid date/time": "",
-  "No consent found for this user.": "",
-  "You do not have permission to edit this patient record.": "",
-  "You haven't entered any management option yet.": "",
-  "you": "",
-  "Are you sure you want to delete this treatment?": "",
-  "Yes": "",
-  "No": "",
-  "Delete": "",
-  "this patient": "",
-  "staff member": "",
-  "data entered by ": "",
-  " on ": "",
-  "Added": "",
-  "You must agree to the terms and conditions by checking the provided checkboxes.": "",
-  "Consent to share information": "",
-  "I consent to sharing information with": "",
-  "Cannot ununcheck.  A staff member must be associated with an organization": "",
-  "Not provided": "",
-  "no data returned": "",
-  "unable to get needed core data": "",
-  "unable to get required core data": "",
-  "No information available": "",
-  "no data found": "",
-  "User Id is required": "",
-  "No data found": "",
-  "Unable to retrieve portal footer html": "",
-  "Server error occurred retrieving organization/clinic information.": "",
-  "Problem retrieving data from server.": "",
-  "Error Status Code: ": "",
-  "Permission denied to access patient record": "",
-  "Server error occurred retrieving consent information.": "",
-  "Server error occurred setting consent status.": "",
-  "Unable to set default consent agreement": "",
-  "Server error occurred removing consent.": "",
-  "Server error occurred retrieving demographics information.": "",
-  "Server error occurred setting demographics information.": "",
-  "Server error occurred retrieving locale information.": "",
-  "Error retrieving data from server": "",
-  "Server error occurred saving procedure/treatment information.": "",
-  "Server error occurred removing procedure/treatment information.": "",
-  "Server error occurred retrieving roles information.": "",
-  "Server error occurred retrieving user role information.": "",
-  "Server error occurred setting user role information.": "",
-  "Server error occurred deleting user role.": "",
-  "Server error occurred retrieving clinical data.": "",
-  "Server error occurred updating clinical data.": "",
-  "no url returned": "",
-  "Server error occurred retrieving tou url.": "",
-  "Server error": "",
-  "error retrieving instruments list": "",
-  "Server error occurred retrieving tou data.": "",
-  "Server error occurred saving terms of use information.": "",
-  "not provided": "",
-  "All fields must be complete.": "",
-  "Please enter a valid date.": "",
-  "Please enter a valid month.": "",
-  "Please enter a valid year.": "",
-  "This e-mail address is already in use. Please enter a different address.": "",
-  "Please remove invalid characters and try again.": "",
-  "Sorry, this isn't a valid date. Please try again.": "",
-  "This isn't a valid e-mail address, please double-check.": "",
-  "Invalid date. Please try again.": "",
-  "Date must not be in the future. Please try again.": "",
-  "Date must not be before 1900. Please try again.": "",
-  "Date/time zone conversion is not supported in current browser. All date/time fields are converted to local time zone instead.": "",
-  "Error occurred when converting timezone: ": ""
+	"agree_to_text": "Agreed to {{agreement_type}}",
+	"Select All": "",
+	"Clear All": "",
+	"Close": "",
+	"Error occurred retrieving data from server.": "",
+	"Please choose at least one instrument.": "",
+	"Please choose one download type.": "",
+	"Error retrieving demographics information for user.": "",
+	"Error occurred updating user organization.": "",
+	"Error updating organization": "",
+	"Decision Support": "",
+	"Symptom Tracker": "",
+	"Edit in Liferay": "",
+	"Organization": "",
+	"Consent Status": "",
+	"Status": "",
+	"Agreement": "",
+	"Date": "",
+	"Regiatration Date": "",
+	"GMT": "",
+	"Consented": "",
+	"Consented / Enrolled": "",
+	"Withdrawn - Suspend Data Collection and Report Historic Data": "",
+	"Suspend Data Collection and Report Historic Data": "",
+	"Sharing information with clinics ": "",
+	"View": "",
+	"expired": "",
+	"modified on": "",
+	"Consent Status Editor": "",
+	"Modify the consent status for this user to": "",
+	"Consent Date Editor": "",
+	"Modify the consent date": "",
+	"(GMT 24-hour format)": "",
+	"for this agreement to:": "",
+	"Submit": "",
+	"Agreed to ": "",
+	"Agreed to terms": "",
+	"TrueNTH USA Terms of Use": "",
+	"Date must in the valid format.": "",
+	"Hour must be in valid format, range 0 to 23.": "",
+	"Minute must be in valid format, range 0 to 59.": "",
+	"Second must be in valid format, range 0 to 59.": "",
+	"Error processing data.  Make sure the date is in the correct format.": "",
+	"You must enter a valid date/time": "",
+	"No Consent Record Found": "",
+	"History": "",
+	"No affiliated clinic": "",
+	"No clinic selected": "",
+	"Patient is deceased": "",
+	"No consent found for this user.": "",
+	"You do not have permission to edit this patient record.": "",
+	"You haven't entered any management option yet.": "",
+	"you": "",
+	"Are you sure you want to delete this treatment?": "",
+	"Yes": "",
+	"No": "",
+	"Delete": "",
+	"this patient": "",
+	"staff member": "",
+	"data entered by ": "",
+	" on ": "",
+	"Added": "",
+	"Consent to share information": "",
+	"I consent to sharing information with": "",
+	"Cannot ununcheck.  A staff member must be associated with an organization": "",
+	"Not provided": "",
+	"unable to get needed core data": "",
+	"no data returned": "",
+	"unable to get required core data": "",
+	"No information available": "",
+	"no data found": "",
+	"User Id is required": "",
+	"Unable to retrieve portal footer html": "",
+	"No data found": "",
+	"Server error occurred retrieving organization/clinic information.": "",
+	"Problem retrieving data from server.": "",
+	"Server error occurred retrieving consent information.": "",
+	"Server error occurred setting consent status.": "",
+	"Unable to set default consent agreement": "",
+	"Server error occurred removing consent.": "",
+	"Server error occurred retrieving demographics information.": "",
+	"Server error occurred setting demographics information.": "",
+	"Server error occurred retrieving locale information.": "",
+	"Error retrieving data from server": "",
+	"Server error occurred saving procedure/treatment information.": "",
+	"Server error occurred removing procedure/treatment information.": "",
+	"Server error occurred retrieving roles information.": "",
+	"Server error occurred retrieving user role information.": "",
+	"Server error occurred setting user role information.": "",
+	"Server error occurred deleting user role.": "",
+	"Server error occurred retrieving clinical data.": "",
+	"Server error occurred updating clinical data.": "",
+	"no url returned": "",
+	"Server error occurred retrieving tou url.": "",
+	"Server error": "",
+	"error retrieving instruments list": "",
+	"Server error occurred retrieving tou data.": "",
+	"Server error occurred saving terms of use information.": "",
+	"Error occurred retrieving access url.": "",
+	"Error occurred sending password reset request.": "",
+	"Error occurred retrieving assessment status.": "",
+	"Error occurred retrieving assessment list.": "",
+	"Error occurred retrieving assessment report.": "",
+	"Error occurred retrieving patient report.": "",
+	"Error occurred retrieving audit log.": "",
+	"not provided": "",
+	"All fields must be complete.": "",
+	"Please enter a valid date.": "",
+	"Please enter a valid month.": "",
+	"Please enter a valid year.": "",
+	"This e-mail address is already in use. Please enter a different address.": "",
+	"Please remove invalid characters and try again.": "",
+	"Sorry, this isn't a valid date. Please try again.": "",
+	"This isn't a valid e-mail address, please double-check.": "",
+	"Invalid date. Please try again.": "",
+	"Date must not be in the future. Please try again.": "",
+	"Date must not be before 1900. Please try again.": "",
+	"Date/time zone conversion is not supported in current browser. All date/time fields are converted to local time zone instead.": "",
+	"Error occurred when converting timezone: ": ""
 }
